# FPSE-final-proj

./: .gitignore  Chess.opam  README.md  all.ml  bisect240985298.coverage  bisect726453888.coverage  cli.ml  cli_ai.ml  dune  dune-project  main.ml  server.ml  web_ai.ml
lib/: dune  game.ml  game.mli  game_logic.ml  game_logic.mli  utils.ml
resource/: index.html
src/: ai.ml  ai.mli  board.html  board.ml  css.ml  dune  game.ml  game.mli  game_logic.ml  game_logic.mli  html.ml  html.mli  index.html  main.ml  mmeg.ml  piece.ml  server.ml  server.mli  temp.html  utils.ml  utils.mli
submission/src/: ai.ml  ai.mli  game.mli  game_logic.mli
test/: Chess2.ml  dune
tests/: Chess.ml  Chess2.ml  dune  tests.ml
