(executable
 (name cli)
 (modules cli)
 (libraries libgame)
)

(executable
 (name cli_ai)
 (modules cli_ai)
 (libraries libgame)
)


(executable
 (name web_ai)
 (modules web_ai)
 (libraries libgame dream)
 (preprocess (pps lwt_ppx))
)

(executable
 (name all)
 (modules all)
 (libraries libgame dream)
 (preprocess (pps lwt_ppx))
)
